# deft

./: .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  KANBAN.md  LICENSE  README.md  config.example.toml  deft.md  flowpact.md  rift.md  test-config.toml
.github/workflows/: ci.yml  publish.yml  release.yml  version.yml
deft-cli/: Cargo.toml
deft-cli/src/: chunk_tracker.rs  main.rs
deft-common/: Cargo.toml
deft-common/src/: chunk.rs  hash.rs
deft-daemon/: Cargo.toml
deft-daemon/src/: api.rs  chunk_ordering.rs  chunk_store.rs  client.rs  cluster.rs  compression.rs  config.rs  delta.rs  discovery.rs  encryption.rs  handler.rs  hooks.rs  main.rs  metrics.rs  network.rs  parallel.rs  platform.rs  priority.rs  rate_limit.rs  receipt.rs  server.rs  session.rs  signer.rs  transfer.rs  transfer_state.rs  virtual_file.rs  watcher.rs
deft-daemon/static/: app.js  index.html  style.css
deft-daemon/tests/: api_integration.rs  api_key_security_test.rs  delta_sync_integration.rs  mtls_integration.rs  pause_resume_full_integration.rs  pause_resume_integration.rs  transfer_control_integration.rs  transfer_control_tests.rs  transfer_integration.rs
deft-protocol/: Cargo.toml
deft-protocol/src/: capability.rs  command.rs  endpoint.rs  error.rs  lib.rs  parser.rs  response.rs
deft-protocol/tests/: integration_test.rs
docs/: API.md  CONFIGURATION.md  GETTING_STARTED.md  HOOKS.md  PROTOCOL.md  QUICKSTART.md  openapi.yaml
flowpact-cli/: Cargo.toml
flowpact-cli/src/: main.rs
flowpact-common/: Cargo.toml
flowpact-common/src/: lib.rs
flowpact-daemon/: Cargo.toml
flowpact-daemon/src/: chunk_ordering.rs  client.rs  handler.rs  hooks.rs  main.rs  rate_limit.rs  receipt.rs  server.rs  session.rs  transfer.rs  virtual_file.rs  watcher.rs
flowpact-daemon/static/: app.js  index.html
flowpact-daemon/tests/: transfer_integration.rs
flowpact-protocol/: Cargo.toml
flowpact-protocol/src/: capability.rs  command.rs  lib.rs  parser.rs  response.rs
flowpact-protocol/tests/: integration_test.rs
rift-cli/: Cargo.toml
rift-cli/src/: chunk_tracker.rs  main.rs
rift-common/: Cargo.toml
rift-daemon/: Cargo.toml
rift-daemon/src/: client.rs  compression.rs  config.rs  delta.rs  discovery.rs  handler.rs  hooks.rs  main.rs  metrics.rs  platform.rs  receipt.rs  server.rs  session.rs  signer.rs  transfer.rs  transfer_state.rs  virtual_file.rs
rift-daemon/static/: app.js  index.html
rift-daemon/tests/: transfer_integration.rs
rift-protocol/: Cargo.toml
rift-protocol/src/: command.rs  endpoint.rs  error.rs  lib.rs  parser.rs  response.rs
rift-protocol/tests/: integration_test.rs
scripts/: load_test.sh
scripts/certs/: README.md  generate-ca.sh  generate-client-cert.sh  generate-server-cert.sh  setup-integration-test.sh
sdk/javascript/: package.json
sdk/javascript/src/: index.test.ts  index.ts
sdk/python/: setup.py
sdk/python/deft_client/: __init__.py  client.py  exceptions.py
sdk/python/tests/: __init__.py  test_client.py
tests/k3d/: Dockerfile  README.md  deft-cluster.yaml  run-parallel-tests.sh
tests/k3d/manifests/: deft-node.yaml  namespace.yaml
