[workspace]
resolver = "2"
members = [
    "deft-protocol",
    "deft-common",
    "deft-daemon",
    "deft-cli",
]

[workspace.package]
version = "2.6.1"
edition = "2021"
authors = ["DEFT Contributors"]
license = "MIT"
repository = "https://github.com/deft-protocol/deft"
homepage = "https://github.com/deft-protocol/deft"
documentation = "https://docs.rs/deft-protocol"
keywords = ["file-transfer", "mTLS", "delta-sync", "chunked"]
categories = ["network-programming", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.2"
webpki-roots = "1.0"

# Crypto
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Time
chrono = "0.4"

# Testing
tempfile = "3.26"

# Internal crates
deft-protocol = { path = "deft-protocol" }
deft-common = { path = "deft-common" }
