[package]
name = "deft-cli"
version.workspace = true
edition.workspace = true
description = "DEFT command-line interface"

[[bin]]
name = "deft"
path = "src/main.rs"

[dependencies]
deft-protocol.workspace = true
deft-common.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
