[package]
name = "deft-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DEFT daemon - Delta-Enabled File Transfer server and client with mTLS"
readme = "../README.md"

[[bin]]
name = "deftd"
path = "src/main.rs"

[dependencies]
deft-protocol.workspace = true
deft-common.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
flate2 = "1.0"
rand = "0.8"
prometheus = "0.14"
lazy_static = "1.4"
ring = "0.17"
base64 = "0.21"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }
clap.workspace = true
chrono.workspace = true
sha2.workspace = true
sha1 = "0.10"
x509-parser = "0.16"
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Network interface detection
[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["net"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"] }

[dev-dependencies]
tempfile.workspace = true
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio-test = "0.4"
serde_json = "1.0"
