[package]
name = "deft-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DEFT protocol definitions and parser - Delta-Enabled File Transfer"
readme = "../README.md"

[dependencies]
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
