[package]
name = "flowpact-cli"
version.workspace = true
edition.workspace = true
description = "FlowPact command-line interface"

[[bin]]
name = "flowpact"
path = "src/main.rs"

[dependencies]
flowpact-protocol.workspace = true
flowpact-common.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
