[package]
name = "rift-cli"
version.workspace = true
edition.workspace = true
description = "RIFT command-line interface"

[[bin]]
name = "rift"
path = "src/main.rs"

[dependencies]
rift-protocol.workspace = true
rift-common.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
